@@ -14,16 +14,18 @@
     <parent>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-starter-parent</artifactId>
-        <version>2.0.0.RELEASE</version>
+        <version>2.0.1.RELEASE</version>
         <relativePath/> <!-- lookup parent from repository -->
     </parent>
 
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
+        <asciidoctor.maven.version>1.5.5</asciidoctor.maven.version>
         <dockerfile.maven.version>1.4.0</dockerfile.maven.version>
         <java.version>1.9</java.version>
         <javafaker.version>0.14</javafaker.version>
+        <javax-activation.version>1.1.1</javax-activation.version>
     </properties>
 
     <dependencies>
@@ -101,12 +103,6 @@
     <build>
         <plugins>
             <plugin>
-                <artifactId>maven-surefire-plugin</artifactId>
-                <configuration>
-                    <argLine>--add-modules java.base</argLine>
-                </configuration>
-            </plugin>
-            <plugin>
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-maven-plugin</artifactId>
                 <executions>
@@ -120,7 +116,7 @@
             <plugin>
                 <groupId>org.asciidoctor</groupId>
                 <artifactId>asciidoctor-maven-plugin</artifactId>
-                <version>1.5.5</version>
+                <version>${asciidoctor.maven.version}</version>
                 <executions>
                     <execution>
                         <id>generate-docs</id>
@@ -157,6 +153,7 @@
                         <executions>
                             <execution>
                                 <id>default</id>
+                                <phase>install</phase>
                                 <goals>
                                     <goal>build</goal>
                                     <goal>push</goal>
@@ -164,7 +161,7 @@
                             </execution>
                         </executions>
                         <configuration>
-                            <repository>lafeuille/ljcp-api</repository>
+                            <repository>lafeuille/${project.artifactId}</repository>
                             <tag>${project.version}</tag>
                             <buildArgs>
                                 <JAR_FILE>${project.build.finalName}.jar</JAR_FILE>
@@ -174,13 +171,14 @@
                             <dependency>
                                 <groupId>javax.activation</groupId>
                                 <artifactId>activation</artifactId>
-                                <version>1.1.1</version>
+                                <version>${javax-activation.version}</version>
                             </dependency>
                         </dependencies>
                     </plugin>
                 </plugins>
             </build>
         </profile>
+
         <profile>
             <id>git</id>
             <activation>
